# vk-task

./: .clangd  CMakeLists.txt  README.md
include/: scheduler.hpp
src/: main.cpp  scheduler.cpp
